--- a/app/src/templates/test.html
+++ b/app/src/templates/test.html
@@ -1,13 +1,9 @@
-<html>
-  <head>
-  <meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″ />
-  <title>サンプル</title>
-  </head>
-  <body>
+{extends file='layout.html'}
+{block name=title}My Page Title{/block}
+{block name=body}
   <ul>
-  <li>{$test1}</li>
-  <li>{$test2}</li>
-  <li>{$test3}</li>
+    <li>{$test1}</li>
+    <li>{$test2}</li>
+    <li>{$test3}</li>
   </ul>
-  </body>
-  </html>
+{/block}
