--- a/app/src/templates/layout.html
+++ b/app/src/templates/layout.html
@@ -11,10 +11,23 @@
   <title>{block name=title}Default Page Title{/block}</title>
 </head>
 <body>
-  <div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">PHP Guestbook</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.php">ゲスト一覧</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="create.php">ゲスト登録</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+  <div class="container mt-5">
     {block name=body}{/block}
   </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
