--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -2,4 +2,23 @@
 {block name=title}ゲスト一覧 | PHP Guestbook{/block}
 {block name=body}
   <h1>ゲスト一覧</h1>
+  
+  <table class="table mt-5">
+    <thead>
+      <tr>
+        <th scope="col">名前</th>
+        <th scope="col">メールアドレス</th>
+        <th scope="col">住所</th>
+      </tr>
+    </thead>
+    <tbody>
+      {section name=guest loop=$guests}
+      <tr>
+        <td>{$guests[guest].name}</td>
+        <td>{$guests[guest].mail}</td>
+        <td>{$guests[guest].address}</td>
+      </tr>
+      {/section}
+    </tbody>
+  </table>
 {/block}
