--- a/web/src/templates/layout.html
+++ b/web/src/templates/layout.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.php">ゲスト一覧</a>
+            <a class="nav-link" href="/">ゲスト一覧</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="create.php">ゲスト登録</a>
