ゲスト登録を作成

--- a/web/src/templates/index.html
+++ b/web/src/templates/index.html
@@ -15,7 +15,7 @@
       {section name=guest loop=$guests}
       <tr>
         <td>{$guests[guest].name}</td>
-        <td>{$guests[guest].mail}</td>
+        <td>{$guests[guest].email}</td>
         <td>{$guests[guest].address}</td>
       </tr>
       {/section}
