--- a/web/src/templates/layout.html
+++ b/web/src/templates/layout.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="/">ゲスト一覧</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="create.php">ゲスト登録</a>
+            <a class="nav-link" href="register.php">ゲスト登録</a>
           </li>
         </ul>
       </div>
